--- a/app/src/main/res/layout/row_scan_result.xml
+++ b/app/src/main/res/layout/row_scan_result.xml
@@ -3,28 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_margin="8sp"
+    android:background="@color/white"
+    android:elevation="4dp"
+    android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/scan_button"
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="Scan"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ListView
-        android:layout_width="409dp"
-        android:layout_height="649dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        style="@style/TextAppearance.AppCompat.Title"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scan_button" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
